# mcp-databricks-server

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
docs/: ARCHITECTURE.md  TESTING.md
src/databricks_mcp/: __init__.py  config.py  databricks_formatter.py  databricks_sdk_utils.py  jobs.py  lineage.py  main.py  unity_catalog.py
test/: conftest.py  test_critical_paths.py  test_databricks_formatter.py  test_databricks_sdk_utils.py  test_main.py  test_module_imports.py  test_unity_catalog.py
