[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Databricks Unity Catalog and SQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk==0.55.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
databricks-mcp-server = "databricks_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_mcp"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
asyncio_mode = "auto"
